deployment/base/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  labels:
    app: registry-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-service
  template:
    metadata:
      labels:
        app: registry-service
    spec:
      containers:
        - name: registry
          image: registry:2.8.2
          ports:
            - containerPort: 5000
              name: http
