deployment/base/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  selector:
    app: registry-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30010
      name: service
